# everything

./: .gitignore  CLAUDE.md  R Markdown.sublime-syntax  README.md  ecolor  elocate  eread  esearch  etext  eview  rge  rgef
mcp-server/: README.md  everything_mcp.py  pyproject.toml
