[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "everything-mcp"
version = "0.1.0"
description = "MCP server wrapping the 'everything' file-search toolkit"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0"]

[project.scripts]
everything-mcp = "everything_mcp:main"

[tool.setuptools]
py-modules = ["everything_mcp"]
